day3/default-sc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: default-sc-pod
spec:
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: default-pvc
  containers:
    - name: container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: storage
