day3/nfs-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-pvc-pod
  labels:
    app: pvc-pod
spec:
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: nfs-pvc
  containers:
    - name: container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: storage
