day3/nfs-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-vol-pod
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: nfs-volume
  volumes:
  - name: nfs-volume
    nfs:
      server: 192.168.1.222
      path: /var/nfs-share
